crates/strider/tests/snapshots/v2__x86_kernel__complex__if_bit_clear_call.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x401130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v17" [color="#888888", style=dashed];
  "v17" -> "16" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v18" [color="#888888", style=dashed];
  "v18" -> "16" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v19" [color="#888888", style=dashed];
  "v19" -> "16" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x401212:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
